<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/title_contains"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/num_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_requestnum"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_requestnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_1_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/desc_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_1_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_itemnum"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_itemnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:singleLine="true"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>


            <View
                android:id="@+id/view_2_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/desc_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/modelnum_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_1_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_location"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:singleLine="true"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>


            <View
                android:id="@+id/view_9_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/desc_linearlayout_id"
                android:background="@drawable/line"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_1_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_desc_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_description"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:singleLine="true"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>


            <View
                android:id="@+id/view_3_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/desc_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/in20_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_2_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_recorde_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_reservedqty"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_reservedqty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_orderunit_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_4_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/in20_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/orderunit_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_3_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_orderunit_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_restype"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/invreserve_restype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_orderunit_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_5_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/orderunit_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/issueunit_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_4_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_issueunit_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invreserve_binnum"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <EditText
                    android:id="@+id/invreserve_binnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_login"
                    android:drawablePadding="8dp"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_6_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/issueunit_linearlayout_id"
                android:background="@drawable/line"></View>


        </LinearLayout>

        <Button
            android:id="@+id/input_button_id"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_enable_green"
            android:text="@string/input"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_16sp"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>
