<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/title_contains"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_contains">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_assetnum"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_assetnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_1_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/asset_description"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_2_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/asset_n_locaname"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_n_locaname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_3_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_n_modelnum"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_n_modelnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_4_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/asset_assettype"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_assettype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_5_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/asset_parent"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_6_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:gravity="center_vertical"
                    android:text="@string/asset_status"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/asset_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_7_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="50dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:orientation="horizontal">-->

                <!--<Button-->
                    <!--android:id="@+id/locations_removed_btn_id"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/dimen_40dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:text="@string/locations_removed_btn"-->
                    <!--android:background="@drawable/btn_enable_green"/>-->

                <!--<Button-->
                    <!--android:id="@+id/locations_move_btn_id"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/dimen_40dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:text="@string/locations_move_btn"-->
                    <!--android:background="@drawable/btn_enable_green"/>-->


            <!--</LinearLayout>-->

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
